Added links and updated the prose

--- a/site/index.html
+++ b/site/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+
+<!-- 
+
+###############################################################
+
+REMINDER: Don't edit the index.html page directly. 
+
+Use the template.html file and build process instead. 
+
+###############################################################
+
+-->
+
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -170,6 +183,10 @@
                 max-width: 62ch;
             }
 
+            nav {
+                padding-bottom: 2.3rem;
+            }
+
             footer {
                 flex-shrink: 0;
                 width: 100%;
@@ -190,31 +207,39 @@
         </style>
     </head>
     <body>
+
+<!-- 
+
+###############################################################
+
+REMINDER: Don't edit the index.html page directly. 
+
+Use the template.html file and build process instead. 
+
+###############################################################
+
+-->
+
         <header>
-            <h1>The Links Of Alan</h1>
+            <nav>
+                <a href="https://www.alanwsmith.com/">alanwsmith.com</a> ~
+                <a href="https://socials.alanwsmith.com/">socials</a>
+            </nav>
+            <h1>Alan's Projects And Links</h1>
         </header>
         <main>
-            <p>Hello! Welcome to my links page.</p>
+            <p>Hello! Welcome to my projects and links page!</p>
             <p>
-                This page originally included a piece called
-                <a
-                    href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
-                    >How To Grow Your Digital Garden With Sub-Domains</a
-                >. It's worth a read if you're looking to get started with your
-                own digital garden.
+                I'm a huge fan of the <a href="https://maggieappleton.com/garden-history">Digital Garden</a>
+                approach to websites. One of the things I've found 
+                most helpful for growing mine is the liberal use
+                of sub-domains for exploring ideas.
+                It's incredibly freeing to have a clean slate
+                to play with when working on something new. 
             </p>
 
             <p>
-                I'm on
-                <a href="https://www.twitch.tv/theidofalan">Twitch</a>,
-                <a rel="me" href="https://hachyderm.io/@TheIdOfAlan"
-                    >Mastodon</a
-                >
-                and occasionaly do a
-                <a href="https://podcast.alanwsmith.com/">podcast</a>. But, the
-                real point of this page is the various sub-domains that make up
-                my Digital Garden. Here's the places I put stuff on the web
-                (some of them don't have much, but that's how gardens grow)
+                Here's my current list:
             </p>
 
             <dl>
@@ -243,6 +268,14 @@
 </dd>
 
 <dt>
+<h4><a href="https://art.alanwsmith.com/">The Art Of Alan</a></h4>
+<div class="url_display"><a href="https://art.alanwsmith.com/">art.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Historically, I've been a photographer. These days, I'm getting into Processing and Blender. This is where I'm posting those pieces.</p>
+</dd>
+
+<dt>
 <h4><a href="https://ascii-art.alanwsmith.com/">ASCII Art</a></h4>
 <div class="url_display"><a href="https://ascii-art.alanwsmith.com/">ascii-art.alanwsmith.com</a></div>
 </dt>
@@ -264,6 +297,14 @@
 </dt>
 <dd>
 <p>I started playing around with Blender to give me something to do that's not coding. Sure, it's still on a computer, but it kicks the visual part of my brain into gear which is a nice change of pace. </p>
+</dd>
+
+<dt>
+<h4><a href="https://bsky.app/profile/alanwsmith.com">Bluesky</a></h4>
+<div class="url_display"><a href="https://bsky.app/profile/alanwsmith.com">bsky.app/profile/alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Bluesky feels like a cross between &quot;original good twitter&quot; and &quot;new, crappy, engagement bait twitter&quot;. I'm glad it exists even though I generally prefer mastodon</p>
 </dd>
 
 <dt>
@@ -331,11 +372,27 @@
 </dd>
 
 <dt>
+<h4><strike>Facebook</strike></h4>
+<div class="url_display"><strike>no longer active</strike></div>
+</dt>
+<dd>
+<p>I haven't been on Facebook in years. It's a prime example of enshittification</p>
+</dd>
+
+<dt>
 <h4><a href="https://fonts-and-colors.alanwsmith.com/">Fonts and Colors</a></h4>
 <div class="url_display"><a href="https://fonts-and-colors.alanwsmith.com/">fonts-and-colors.alanwsmith.com</a></div>
 </dt>
 <dd>
 <p>I'm not good at color swabs or fonts in isolation. I built this so I don't have to be. Changes show up directly on the page.</p>
+</dd>
+
+<dt>
+<h4><a href="https://github.com/alanwsmith">GitHub</a></h4>
+<div class="url_display"><a href="https://github.com/alanwsmith">github.com/alanwsmith</a></div>
+</dt>
+<dd>
+<p>Not everything I do is on GitHub, but a lot of it is. This is your place to go if you want to see what I've been up to with the codes</p>
 </dd>
 
 <dt>
@@ -404,7 +461,7 @@ inspired by
 <div class="url_display"><a href="https://html-template.alanwsmith.com">html-template.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>My new starter template for making a site without using a third-party framework.</p><p>I didn't realize till posting this that I already had the 'static-template' domain set up. That name didn't stick in my head though and I'm cool with starting fresh regardless.</p>
+<p>My latest starter template for making a site without using a third-party framework.</p><p>(I didn't realize till posting this that I already had the 'static-template' domain set up. That name didn't stick in my head though and I'm cool with starting fresh regardless.)</p>
 </dd>
 
 <dt>
@@ -413,6 +470,14 @@ inspired by
 </dt>
 <dd>
 <p>A collection of ideas for programming projects if you need something to help get you started</p>
+</dd>
+
+<dt>
+<h4><a href="https://jacktorrance.blog/">Jack Torrance's Shiny Blog</a></h4>
+<div class="url_display"><a href="https://jacktorrance.blog/">jacktorrance.blog</a></div>
+</dt>
+<dd>
+<p>An homage to The Shining. It's also what I had my site doing <a href="https://web.archive.org/web/20010721234034/http://www.alanwsmith.com/">way back in 2001</a></p>
 </dd>
 
 <dt>
@@ -493,6 +558,22 @@ really need to add dark mode)</p>
 </dd>
 
 <dt>
+<h4><a href="https://hachyderm.io/@TheIdOfAlan">Mastodon</a></h4>
+<div class="url_display"><a href="https://hachyderm.io/@TheIdOfAlan">hachyderm.io/@TheIdOfAlan</a></div>
+</dt>
+<dd>
+<p>My favorite social network. It took a while to get going on it. I've got a good list of folks I follow now. One of my favorite thigs about it is there's very little 'engagment bait' crap on it.</p>
+</dd>
+
+<dt>
+<h4><strike>The Million Portrait Project</strike></h4>
+<div class="url_display"><strike>MillionPortraitProject.com</strike></div>
+</dt>
+<dd>
+<p>I have a long term plan of doing a portriat project with the goal of getting my images hung in the National Portrait Gallery. This was the origal site for the project. I let it expire with plans to move it to a sub-domain but haven't set that up yet. So, it's on hiatus</p>
+</dd>
+
+<dt>
 <h4><a href="https://minecraft.alanwsmith.com/">Minecraft Notes</a></h4>
 <div class="url_display"><a href="https://minecraft.alanwsmith.com/">minecraft.alanwsmith.com</a></div>
 </dt>
@@ -508,6 +589,14 @@ every time. Another plain HTML file site that I'll be adding some
 </dt>
 <dd>
 <p>A little game where you decrypt texts (Currently Offline)</p>
+</dd>
+
+<dt>
+<h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
+<div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I&apos;m always on the look out for band names. I&apos;ve started collecting them here</p>
 </dd>
 
 <dt>
@@ -527,6 +616,14 @@ every time. Another plain HTML file site that I'll be adding some
 </dd>
 
 <dt>
+<h4><a href="https://socials.alanwsmith.com/only-fans/">Only Fans</a></h4>
+<div class="url_display"><a href="https://socials.alanwsmith.com/only-fans/"></a></div>
+</dt>
+<dd>
+<p>You sure you want to click on this one?</p>
+</dd>
+
+<dt>
 <h4><a href="https://photos.alanwsmith.com/">photos.alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://photos.alanwsmith.com/">photos.alanwsmith.com</a></div>
 </dt>
@@ -536,6 +633,16 @@ I got into code. During the years of getting my ass kicked by mental
 health issues, it left me. It was gone so long I'&apos;d gotten used
 to the idea that it was gone forever. Now, it&apos;s back. This is
 where I&apos;m posting my stuff</p>
+</dd>
+
+<dt>
+<h4><a href="https://podcast.alanwsmith.com/">The Pod Of Alan Podcast</a></h4>
+<div class="url_display"><a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Home of The Pod Of Alan where I riff on working in public, making
+stuff, creativity, art, design, education, learning, language, mental
+health, movies, and music</p>
 </dd>
 
 <dt>
@@ -586,13 +693,27 @@ as possible</p>
 </dd>
 
 <dt>
+<h4><a href="https://slides.alanwsmith.com/">The Slides Of Alan</a></h4>
+<div class="url_display"><a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>This one is aspirational. The idea is to put slide decks here for talks and videos. Though, there's a good chance each slide deck will end up on it's own sub-domain so I've got the option of using different tech for each one</p>
+</dd>
+
+<dt>
+<h4><a href="https://socials.alanwsmith.com">Social Networks</a></h4>
+<div class="url_display"><a href="https://socials.alanwsmith.com">socials.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Links to the current list of places you can find me on the internet</p>
+</dd>
+
+<dt>
 <h4><a href="https://static-template.alanwsmith.com/">Static HTML Site Template</a></h4>
 <div class="url_display"><a href="https://static-template.alanwsmith.com/">static-template.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>My basic template for starting sites without frameworks. Has sample
-favicons and Open Graph image calls and will eventually have CSS and
-JS samples</p>
+<p>This was an earlier template I used for starting new static sites on a sub-domain. I don't use it any more. It's just here for reference.</p>
 </dd>
 
 <dt>
@@ -600,10 +721,15 @@ JS samples</p>
 <div class="url_display"><strike>surftech.tv</strike></div>
 </dt>
 <dd>
-<p>This is a little project I built for myself so that when I've got a
-some time to watch a tech video during lunch I don't have to worry
-about finding one. This just plays a random one for me. Still have a
-bunch of features to add to this, but the basic functionality is nice</p>
+<p>A project I built for when I've got some time to watch a tech video but don't want to have to pick one out. The page picks a random one from a list and loads it automatcially. I let the domain expire. I'll move it to a sub-domain at some point</p>
+</dd>
+
+<dt>
+<h4><a href="https://svg-button-maker.alanwsmith.com">SVG Button Maker</a></h4>
+<div class="url_display"><a href="https://svg-button-maker.alanwsmith.com">svg-button-maker.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My tool for converting SVGs into accessible HTML/CSS buttons.</p><p>There's way more to making a button out of an SVG than I realized. With this, remembering it all isn't required.</p>
 </dd>
 
 <dt>
@@ -615,58 +741,6 @@ bunch of features to add to this, but the basic functionality is nice</p>
 </dd>
 
 <dt>
-<h4><a href="https://art.alanwsmith.com/">The Art Of Alan</a></h4>
-<div class="url_display"><a href="https://art.alanwsmith.com/">art.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>Historically, I've been a photographer. These days, I'm getting into Processing and Blender. This is where I'm posting those pieces.</p>
-</dd>
-
-<dt>
-<h4><a href="http://millionportraitproject.com/">The Million Portrait Project</a></h4>
-<div class="url_display"><a href="http://millionportraitproject.com/">MillionPortraitProject.com</a></div>
-</dt>
-<dd>
-<p>It's been on hiatus, and doesn't have a lot there yet, but this is my
-long term photography project. (Fair warning that the site isn't
-          responsive. I didn't know how to do that when I made it)</p>
-</dd>
-
-<dt>
-<h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
-<div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>I&apos;m always on the look out for band names. I&apos;ve started collecting them here</p>
-</dd>
-
-<dt>
-<h4><a href="https://podcast.alanwsmith.com/">The Pod Of Alan Podcast</a></h4>
-<div class="url_display"><a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>Home of The Pod Of Alan where I riff on working in public, making
-stuff, creativity, art, design, education, learning, language, mental
-health, movies, and music</p>
-</dd>
-
-<dt>
-<h4><a href="https://jacktorrance.blog/">The Shiny Blog Of Jack Torrance</a></h4>
-<div class="url_display"><a href="https://jacktorrance.blog/">jacktorrance.blog</a></div>
-</dt>
-<dd>
-<p>An homage to The Shining. It's also what I had my site doing <a href="https://web.archive.org/web/20010721234034/http://www.alanwsmith.com/">way back in 2001</a></p>
-</dd>
-
-<dt>
-<h4><a href="https://slides.alanwsmith.com/">The Slides Of Alan</a></h4>
-<div class="url_display"><a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>Gonna start putting slide decks here for talks and videos</p>
-</dd>
-
-<dt>
 <h4><a href="https://tutorial-thoughts.alanwsmith.com/">Tutorial Thoughts</a></h4>
 <div class="url_display"><a href="https://tutorial-thoughts.alanwsmith.com/">tutorial-thoughts.alanwsmith.com</a></div>
 </dt>
@@ -674,6 +748,22 @@ health, movies, and music</p>
 <p>I find most coding tutorials frustrating. This is my place to
 experiment with layouts, designs, and concepts that work with the way
 my brain works</p>
+</dd>
+
+<dt>
+<h4><a href="https://www.twitch.tv/theidofalan">Twitch</a></h4>
+<div class="url_display"><a href="https://www.twitch.tv/theidofalan">twitch.tv/theidofalan</a></div>
+</dt>
+<dd>
+<p>Every want to see someone code live? Here's your chance. (I very much go through phases with how much I stream. Going from several times a week to skipping entire months is not uncommon)</p>
+</dd>
+
+<dt>
+<h4><strike>Twitter</strike></h4>
+<div class="url_display"><strike>no longer active</strike></div>
+</dt>
+<dd>
+<p>I haven't been on twitter/x in a long time. It's just gross now</p>
 </dd>
 
 <dt>
@@ -690,6 +780,14 @@ my brain works</p>
 </dt>
 <dd>
 <p>A work in progress. Making a waveform display to use when making screen recordings</p>
+</dd>
+
+<dt>
+<h4><a href="https://web-component-techniques.alanwsmith.com/">Web Component Techniques</a></h4>
+<div class="url_display"><a href="https://web-component-techniques.alanwsmith.com/">web-component-techniques.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>The place where I'm keeping my notes about how to work with web components</p>
 </dd>
 
 <dt>
@@ -712,17 +810,30 @@ connected and what I'm doing</p>
 </dd>
 
 <dt>
-<h4><a href="https://yt-player.alanwsmith.com">YouTube Player Web Component</a></h4>
-<div class="url_display"><a href="https://yt-player.alanwsmith.com">yt-player.alanwsmith.com</a></div>
+<h4><a href="https://www.youtube.com/@TheIdOfAlan">YouTube</a></h4>
+<div class="url_display"><a href="https://www.youtube.com/@TheIdOfAlan">youtube.com/@TheIdOfAlan</a></div>
+</dt>
+<dd>
+<p>Lots of randomness here. From Scratch and Minecraft videos to timers and test NASA clips</p>
+</dd>
+
+<dt>
+<h4><a href="https://youtube-player.alanwsmith.com">YouTube Player Web Component</a></h4>
+<div class="url_display"><a href="https://youtube-player.alanwsmith.com">youtube-player.alanwsmith.com</a></div>
 </dt>
 <dd>
 <p>The web component I use to embed videos on my sites. It provides control buttons for play/pause/stop, mute/unmute, and changing playback speeds. It also sets a data attribute on the body tag that can be used to do things like dim the rest of the page when a video is playing</p>
 </dd>
 </dl>
+
         </main>
         <footer>
             <div>
                 made by <a href="https://www.alanwsmith.com">alan w smith</a>
+            </div>
+            <div>
+                <a href="https://github.com/alanwsmith/links.alanwsmith.com">source code</a> ~
+                <a href="https://socials.alanwsmith.com/">socials</a>
             </div>
         </footer>
     </body>
