--- a/scripts/page_builder/template.html
+++ b/scripts/page_builder/template.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+
+<!-- 
+
+###############################################################
+
+REMINDER: Don't edit the index.html page directly. 
+
+Use the template.html file and build process instead. 
+
+###############################################################
+
+-->
+
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -170,6 +183,10 @@
                 max-width: 62ch;
             }
 
+            nav {
+                padding-bottom: 2.3rem;
+            }
+
             footer {
                 flex-shrink: 0;
                 width: 100%;
@@ -190,38 +207,51 @@
         </style>
     </head>
     <body>
+
+<!-- 
+
+###############################################################
+
+REMINDER: Don't edit the index.html page directly. 
+
+Use the template.html file and build process instead. 
+
+###############################################################
+
+-->
+
         <header>
-            <h1>The Links Of Alan</h1>
+            <nav>
+                <a href="https://www.alanwsmith.com/">alanwsmith.com</a> ~
+                <a href="https://socials.alanwsmith.com/">socials</a>
+            </nav>
+            <h1>Alan's Projects And Links</h1>
         </header>
         <main>
-            <p>Hello! Welcome to my links page.</p>
+            <p>Hello! Welcome to my projects and links page!</p>
             <p>
-                This page originally included a piece called
-                <a
-                    href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
-                    >How To Grow Your Digital Garden With Sub-Domains</a
-                >. It's worth a read if you're looking to get started with your
-                own digital garden.
+                I'm a huge fan of the <a href="https://maggieappleton.com/garden-history">Digital Garden</a>
+                approach to websites. One of the things I've found 
+                most helpful for growing mine is the liberal use
+                of sub-domains for exploring ideas.
+                It's incredibly freeing to have a clean slate
+                to play with when working on something new. 
             </p>
 
             <p>
-                I'm on
-                <a href="https://www.twitch.tv/theidofalan">Twitch</a>,
-                <a rel="me" href="https://hachyderm.io/@TheIdOfAlan"
-                    >Mastodon</a
-                >
-                and occasionaly do a
-                <a href="https://podcast.alanwsmith.com/">podcast</a>. But, the
-                real point of this page is the various sub-domains that make up
-                my Digital Garden. Here's the places I put stuff on the web
-                (some of them don't have much, but that's how gardens grow)
+                Here's my current list:
             </p>
 
             <dl>$DETAILS</dl>
+
         </main>
         <footer>
             <div>
                 made by <a href="https://www.alanwsmith.com">alan w smith</a>
+            </div>
+            <div>
+                <a href="https://github.com/alanwsmith/links.alanwsmith.com">source code</a> ~
+                <a href="https://socials.alanwsmith.com/">socials</a>
             </div>
         </footer>
     </body>
