--- a/site/index.html
+++ b/site/index.html
@@ -276,14 +276,6 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
-<h4><a href="https://ascii-art.alanwsmith.com/">ASCII Art</a></h4>
-<div class="url_display"><a href="https://ascii-art.alanwsmith.com/">ascii-art.alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>A few famous pieces of art turned into ASCII. This is one of five experiments in making a site out of just HTML. There&apos;s no JavaScript, CSS, or image calls. Just the HTML. The idea came from <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649">this tweet from whitep4nth3r</a> about HTML only web sites.</p>
-</dd>
-
-<dt>
 <h4><a href="https://aws-price-list-api-values.alanwsmith.com/">AWS API Price List Values</a></h4>
 <div class="url_display"><a href="https://aws-price-list-api-values.alanwsmith.com/">aws-price-list-api-values.alanwsmith.com</a></div>
 </dt>
@@ -412,7 +404,7 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
-<h4><a href="https://html-animation.alanwsmith.com/">HTML Only Animation</a></h4>
+<h4><a href="https://html-animation.alanwsmith.com/">HTML Only: Animation</a></h4>
 <div class="url_display"><a href="https://html-animation.alanwsmith.com/">html-animation.alanwsmith.com</a></div>
 </dt>
 <dd>
@@ -420,7 +412,15 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
-<h4><a href="https://html-display-board.alanwsmith.com/">HTML Only Display Board</a></h4>
+<h4><a href="https://ascii-art.alanwsmith.com/">HTML Only: ASCII Art</a></h4>
+<div class="url_display"><a href="https://ascii-art.alanwsmith.com/">ascii-art.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A few famous pieces of art turned into ASCII. This is one of five experiments in making a site out of just HTML. There&apos;s no JavaScript, CSS, or image calls. Just the HTML. The idea came from <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649">this tweet from whitep4nth3r</a> about HTML only web sites.</p>
+</dd>
+
+<dt>
+<h4><a href="https://html-display-board.alanwsmith.com/">HTML Only: Display Board</a></h4>
 <div class="url_display"><a href="https://html-display-board.alanwsmith.com/">html-display-board.alanwsmith.com</a></div>
 </dt>
 <dd>
@@ -428,7 +428,7 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
-<h4><a href="https://html-maze.alanwsmith.com/">HTML Only Maze</a></h4>
+<h4><a href="https://html-maze.alanwsmith.com/">HTML Only: Maze</a></h4>
 <div class="url_display"><a href="https://html-maze.alanwsmith.com/">html-maze.alanwsmith.com</a></div>
 </dt>
 <dd>
@@ -436,7 +436,7 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
-<h4><a href="https://pixel-art.alanwsmith.com/">HTML Only Pixel Art</a></h4>
+<h4><a href="https://pixel-art.alanwsmith.com/">HTML Only: Pixel Art</a></h4>
 <div class="url_display"><a href="https://pixel-art.alanwsmith.com/">pixel-art.alanwsmith.com</a></div>
 </dt>
 <dd>
@@ -449,7 +449,7 @@ inspired by
 </dd>
 
 <dt>
-<h4><a href="https://html-random-pattern.alanwsmith.com/">HTML Only Random Pattern</a></h4>
+<h4><a href="https://html-random-pattern.alanwsmith.com/">HTML Only: Random Pattern</a></h4>
 <div class="url_display"><a href="https://html-random-pattern.alanwsmith.com/">html-random-pattern.alanwsmith.com</a></div>
 </dt>
 <dd>
