--- a/scripts/page_builder/template.html
+++ b/scripts/page_builder/template.html
@@ -239,7 +239,8 @@ Use the template.html file and build process instead.
             </p>
 
             <p>
-                Here's my current list:
+                Here's my current list (fair warning: some of these 
+                are works-in-progress that don't yet do what they say on the tin):
             </p>
 
             <dl>$DETAILS</dl>
