--- a/site/index.html
+++ b/site/index.html
@@ -239,7 +239,8 @@ Use the template.html file and build process instead.
             </p>
 
             <p>
-                Here's my current list:
+                Here's my current list (fair warning: some of these 
+                are works-in-progress that don't yet do what they say on the tin):
             </p>
 
             <dl>
@@ -248,7 +249,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://867-5309.alanwsmith.com">867-5309.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it. The main point of the page is to experiment with a technique for having a blurred background based off the video that's playing.</p>
+<p>Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it. The main point of the page is to experiment with a technique for having a blurred background based off the video that's playing</p>
 </dd>
 
 <dt>
@@ -256,7 +257,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>The place where it all began. This is my main site/blog. It&apos;s personal so I post about whatever happens to have my interest. Music, movies, code, having bipolar disorder, whatever. It's also not organized right now. It's just an alphabetical listing of links. Improving that is definitely on the to-do list.</p>
+<p>The place where it all began. This is my main site/blog. It&apos;s personal so I post about whatever happens to have my interest. Music, movies, code, having bipolar disorder, whatever. It's also not organized right now. It's just an alphabetical listing of links. Improving that is definitely on the to-do list</p>
 </dd>
 
 <dt>
@@ -264,7 +265,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://areyoucurrentlyalive.alanwsmith.com/">AreYouCurrentlyAlive.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>Build this one in the spirit of <a href="http://www.hasthelargehadroncolliderdestroyedtheworldyet.com/">Has The Large Hadron Collider Destroyed The World Yet.com</a> for Netlify's 2021 <a href="https://dusty.domains/">Dusty Domains</a>. The little page was worth $500 to charity.</p>
+<p>Build this one in the spirit of <a href="http://www.hasthelargehadroncolliderdestroyedtheworldyet.com/">Has The Large Hadron Collider Destroyed The World Yet.com</a> for Netlify's 2021 <a href="https://dusty.domains/">Dusty Domains</a>. The little page was worth $500 to charity</p>
 </dd>
 
 <dt>
@@ -385,6 +386,14 @@ Use the template.html file and build process instead.
 </dt>
 <dd>
 <p>Not everything I do is on GitHub, but a lot of it is. This is your place to go if you want to see what I've been up to with the codes</p>
+</dd>
+
+<dt>
+<h4><a href="https://github-stars.alanwsmith.com/">GitHub Stars (Web Component)</a></h4>
+<div class="url_display"><a href="https://github-stars.alanwsmith.com/">github-stars.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A little web component for displaying the GitHub stars for a repo. It wasn't really necessary to build as there's an official GitHub one. It was a good learning project though. Plus, you can change the colors on this one. A feature the official one doesn't have</p>
 </dd>
 
 <dt>
@@ -538,13 +547,21 @@ sub-domain digital gardens. But you already know that since you're looking at th
 </dd>
 
 <dt>
+<h4><a href="https://low-tide-at-sunrise.alanwsmith.com/">Low Tide At Sunrise Finder</a></h4>
+<div class="url_display"><a href="https://low-tide-at-sunrise.alanwsmith.com/">low-tide-at-sunrise.alanwsmith.com/</a></div>
+</dt>
+<dd>
+<p>I got nerd-sniped with this one. A bird watcher posted how they wanted an app that would show them when sunrise and low tide where within certain times of each other. I was in a headspace where I needed something to mess around with. This was the perfect thing. Got to play around with NOAA.gov data, learn the formula for calculating sunrise (which is way more complex than I anticipated), fight through timezone math, and learn to embed Leaflet maps</p>
+</dd>
+
+<dt>
 <h4><a href="http://manic-scroll.alanwsmith.com/">Manic Scroll</a></h4>
 <div class="url_display"><a href="http://manic-scroll.alanwsmith.com/">manic-scroll.alanwsmith.com</a></div>
 </dt>
 <dd>
 <p>A sample of the notes that I took during a manic bipolar episode.
 There&apos;s nothing particularly profound about them. Just thought it
-might be interesting to post them</p>
+might be interesting to post them. If you ever wanted to see what it looks like during someones brain freaking out, this is it</p>
 </dd>
 
 <dt>
@@ -818,7 +835,7 @@ connected and what I'm doing</p>
 </dd>
 
 <dt>
-<h4><a href="https://youtube-player.alanwsmith.com">YouTube Player Web Component</a></h4>
+<h4><a href="https://youtube-player.alanwsmith.com">YouTube Player (Web Component)</a></h4>
 <div class="url_display"><a href="https://youtube-player.alanwsmith.com">youtube-player.alanwsmith.com</a></div>
 </dt>
 <dd>
