--- a/site/index.html
+++ b/site/index.html
@@ -273,7 +273,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://art.alanwsmith.com/">art.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>Historically, I've been a photographer. These days, I'm getting into Processing and Blender. This is where I'm posting those pieces.</p>
+<p>Historically, I've been a photographer. These days, I'm getting into Processing and Blender. This is where I'm posting those pieces</p>
 </dd>
 
 <dt>
@@ -281,7 +281,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://aws-price-list-api-values.alanwsmith.com/">aws-price-list-api-values.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>I had to dig through the AWS pricing APIs while working on an EC2 pricing comparison for blender rendering. It took a while to figure out how to get at the data. This is the initial data set you can use to filter requests. Hoping it helps save folks some time by not having to bang their heads against this part themselves.</p>
+<p>I had to dig through the AWS pricing APIs while working on an EC2 pricing comparison for blender rendering. It took a while to figure out how to get at the data. This is the initial data set you can use to filter requests. Hoping it helps save folks some time by not having to bang their heads against this part themselves</p>
 </dd>
 
 <dt>
@@ -305,7 +305,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://bright-screen-flash-alert.alanwsmith.com/">bright-screen-flash-alert.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>Designed primarily for streams who work in dark mode. This plays a little yelling sound for chat when they hit a page without it.</p>
+<p>Designed primarily for streams who work in dark mode. This plays a little yelling sound for chat when they hit a page without it</p>
 </dd>
 
 <dt>
@@ -313,7 +313,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://cloudinary-image-maker.alanwsmith.com/">cloudinary-image-maker.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>I got tired of trying to assemble Cloudinary urls. Took less time to make this than I spent trying to figure out how to apply text to an image by hand.</p>
+<p>I got tired of trying to assemble Cloudinary urls. Took less time to make this than I spent trying to figure out how to apply text to an image by hand</p>
 </dd>
 
 <dt>
@@ -321,7 +321,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://color-scheme-switcher.alanwsmith.com/">color-scheme-switcher.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>Some vanilla JavaScript designed to switch color schemes while preventing a Flash Of Unstyled Content (FOUC).</p>
+<p>Some vanilla JavaScript designed to switch color schemes while preventing a Flash Of Unstyled Content (FOUC)</p>
 </dd>
 
 <dt>
@@ -337,7 +337,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://decovar-random.alanwsmith.com/">decovar-random.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>This is the second experiment (that I like better) of randomly adjusting a variables on a variable font. This one is Decovar. (The first was Roboto Flex which is linked below).</p>
+<p>This is the second experiment (that I like better) of randomly adjusting a variables on a variable font. This one is Decovar. (The first was Roboto Flex which is linked below)</p>
 </dd>
 
 <dt>
@@ -345,7 +345,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://django.alanwsmith.com/">django.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>I struggled a lot with the offical Django Tutorial. These are notes, boilerplates, and tutorials I put toghter to teach myself (and hopefully make it easier for other folks to learn).</p>
+<p>I struggled a lot with the offical Django Tutorial. These are notes, boilerplates, and tutorials I put toghter to teach myself (and hopefully make it easier for other folks to learn)</p>
 </dd>
 
 <dt>
@@ -377,7 +377,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://fonts-and-colors.alanwsmith.com/">fonts-and-colors.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>I'm not good at color swabs or fonts in isolation. I built this so I don't have to be. Changes show up directly on the page.</p>
+<p>I'm not good at color swabs or fonts in isolation. I built this so I don't have to be. Changes show up directly on the page</p>
 </dd>
 
 <dt>
@@ -409,7 +409,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://horsevatars.alanwsmith.com/">horsevatars.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>An experiment in making multi-color avatars for <a href="https://frontend.horse/">Frontend Horse</a> </p>
+<p>An experiment in making multi-color avatars for <a href="https://frontend.horse/">Frontend Horse</a> using Cloudinary to automatically generate the images</p>
 </dd>
 
 <dt>
@@ -425,7 +425,7 @@ Use the template.html file and build process instead.
 <div class="url_display"><a href="https://ascii-art.alanwsmith.com/">ascii-art.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>A few famous pieces of art turned into ASCII. This is one of five experiments in making a site out of just HTML. There&apos;s no JavaScript, CSS, or image calls. Just the HTML. The idea came from <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649">this tweet from whitep4nth3r</a> about HTML only web sites.</p>
+<p>A few famous pieces of art turned into ASCII. This is one of five experiments in making a site out of just HTML. There&apos;s no JavaScript, CSS, or image calls. Just the HTML. The idea came from <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649">this tweet from whitep4nth3r</a> about HTML only web sites</p>
 </dd>
 
 <dt>
@@ -470,7 +470,7 @@ inspired by
 <div class="url_display"><a href="https://html-template.alanwsmith.com">html-template.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>My latest starter template for making a site without using a third-party framework.</p><p>(I didn't realize till posting this that I already had the 'static-template' domain set up. That name didn't stick in my head though and I'm cool with starting fresh regardless.)</p>
+<p>My latest starter template for making a site without using a third-party framework</p><p>(I didn't realize till posting this that I already had the 'static-template' domain set up. That name didn't stick in my head though and I'm cool with starting fresh regardless.)</p>
 </dd>
 
 <dt>
@@ -579,7 +579,7 @@ really need to add dark mode)</p>
 <div class="url_display"><a href="https://hachyderm.io/@TheIdOfAlan">hachyderm.io/@TheIdOfAlan</a></div>
 </dt>
 <dd>
-<p>My favorite social network. It took a while to get going on it. I've got a good list of folks I follow now. One of my favorite thigs about it is there's very little 'engagment bait' crap on it.</p>
+<p>My favorite social network. It took a while to get going on it. I've got a good list of folks I follow now. One of my favorite thigs about it is there's very little 'engagment bait' crap on it</p>
 </dd>
 
 <dt>
@@ -680,7 +680,7 @@ This is it</p>
 documentation. Or, really, to keep my place when I'm reading through
 docs. Right now it's just the Org-mode manual split into individual
 pages. The key is that it remembers what page I'm on so I just open
-the site and pick up where I left off.</p>
+the site and pick up where I left off</p>
 </dd>
 
 <dt>
@@ -692,7 +692,7 @@ the site and pick up where I left off.</p>
 </dd>
 
 <dt>
-<h4><a href="https://rtr.alanwsmith.com/">Roll. Tide. Roll.</a></h4>
+<h4><a href="https://rtr.alanwsmith.com/">Roll. Tide. Roll</a></h4>
 <div class="url_display"><a href="https://rtr.alanwsmith.com/">rtr.alanwsmith.com</a></div>
 </dt>
 <dd>
@@ -706,7 +706,7 @@ as possible</p>
 <div class="url_display"><a href="https://rust-notes.alanwsmith.com/">rust-notes.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>My collection of notes for learning Rust. Publishing the entire set as a stand alone site to help me learn better through the process of writing.</p>
+<p>My collection of notes for learning Rust. Publishing the entire set as a stand alone site to help me learn better through the process of writing</p>
 </dd>
 
 <dt>
@@ -730,7 +730,7 @@ as possible</p>
 <div class="url_display"><a href="https://static-template.alanwsmith.com/">static-template.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>This was an earlier template I used for starting new static sites on a sub-domain. I don't use it any more. It's just here for reference.</p>
+<p>This was an earlier template I used for starting new static sites on a sub-domain. I don't use it any more. It's just here for reference. See the &quot;HTML Template&quot; above for the one I'm using now</p>
 </dd>
 
 <dt>
@@ -746,7 +746,7 @@ as possible</p>
 <div class="url_display"><a href="https://svg-button-maker.alanwsmith.com">svg-button-maker.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>My tool for converting SVGs into accessible HTML/CSS buttons.</p><p>There's way more to making a button out of an SVG than I realized. With this, remembering it all isn't required.</p>
+<p>My tool for converting SVGs into accessible HTML/CSS buttons</p><p>There's way more to making a button out of an SVG than I realized. With this, remembering it all isn't required</p>
 </dd>
 
 <dt>
@@ -788,7 +788,7 @@ my brain works</p>
 <div class="url_display"><a href="https://typing-rust.alanwsmith.com/">typing-rust.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>This is my original Rust Notes site where I was going to have a tool to help you type code examples in correctly. I'm punting on it in favor of <a href="https://rust-notes.alanwsmith.com/">Rust Notes</a>.</p>
+<p>This is my original Rust Notes site where I was going to have a tool to help you type code examples in correctly. I'm punting on it in favor of <a href="https://rust-notes.alanwsmith.com/">Rust Notes</a></p>
 </dd>
 
 <dt>
