--- a/site/index.html
+++ b/site/index.html
@@ -609,6 +609,14 @@ every time. Another plain HTML file site that I'll be adding some
 </dd>
 
 <dt>
+<h4><a href="https://multi-player.alanwsmith.com/">Multi-Player</a></h4>
+<div class="url_display"><a href="https://multi-player.alanwsmith.com/">multi-player.alanwsmith.com/</a></div>
+</dt>
+<dd>
+<p>A recreation of a multi-player video page I saw years ago</p>
+</dd>
+
+<dt>
 <h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
 <div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
 </dt>
