--- a/site/index.html
+++ b/site/index.html
@@ -261,6 +261,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://working.alanwsmith.com/">All Work And No Play Notecards</a></h4>
+<div class="url_display"><a href="https://working.alanwsmith.com/">working.alanwsmith.com/</a></div>
+</dt>
+<dd>
+<p>Another tribute to Jack Torrance. This time with notecards</p>
+</dd>
+
+<dt>
 <h4><a href="https://areyoucurrentlyalive.alanwsmith.com/">Are You Currently Alive</a></h4>
 <div class="url_display"><a href="https://areyoucurrentlyalive.alanwsmith.com/">AreYouCurrentlyAlive.alanwsmith.com</a></div>
 </dt>
