--- a/site/index.html
+++ b/site/index.html
@@ -261,8 +261,8 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
-<h4><a href="https://working.alanwsmith.com/">All Work And No Play Notecards</a></h4>
-<div class="url_display"><a href="https://working.alanwsmith.com/">working.alanwsmith.com/</a></div>
+<h4><a href="https://working.alanwsmith.com/">All Work And No Play</a></h4>
+<div class="url_display"><a href="https://working.alanwsmith.com/">working.alanwsmith.com</a></div>
 </dt>
 <dd>
 <p>Another tribute to Jack Torrance. This time with notecards</p>
@@ -556,7 +556,7 @@ sub-domain digital gardens. But you already know that since you're looking at th
 
 <dt>
 <h4><a href="https://low-tide-at-sunrise.alanwsmith.com/">Low Tide At Sunrise Finder</a></h4>
-<div class="url_display"><a href="https://low-tide-at-sunrise.alanwsmith.com/">low-tide-at-sunrise.alanwsmith.com/</a></div>
+<div class="url_display"><a href="https://low-tide-at-sunrise.alanwsmith.com/">low-tide-at-sunrise.alanwsmith.com</a></div>
 </dt>
 <dd>
 <p>I got nerd-sniped with this one. A bird watcher posted how they wanted an app that would show them when sunrise and low tide where within certain times of each other. I was in a headspace where I needed something to mess around with. This was the perfect thing. Got to play around with NOAA.gov data, learn the formula for calculating sunrise (which is way more complex than I anticipated), fight through timezone math, and learn to embed Leaflet maps</p>
@@ -618,7 +618,7 @@ every time. Another plain HTML file site that I'll be adding some
 
 <dt>
 <h4><a href="https://multi-player.alanwsmith.com/">Multi-Player</a></h4>
-<div class="url_display"><a href="https://multi-player.alanwsmith.com/">multi-player.alanwsmith.com/</a></div>
+<div class="url_display"><a href="https://multi-player.alanwsmith.com/">multi-player.alanwsmith.com</a></div>
 </dt>
 <dd>
 <p>A recreation of a multi-player video page I saw years ago</p>
@@ -646,14 +646,6 @@ every time. Another plain HTML file site that I'll be adding some
 </dt>
 <dd>
 <p>A quick place to send ngrok urls to your phone via qr codes</p>
-</dd>
-
-<dt>
-<h4><a href="https://socials.alanwsmith.com/only-fans/">Only Fans</a></h4>
-<div class="url_display"><a href="https://socials.alanwsmith.com/only-fans/"></a></div>
-</dt>
-<dd>
-<p>You sure you want to click on this one?</p>
 </dd>
 
 <dt>
