Added website manifesto

--- a/site/index.html
+++ b/site/index.html
@@ -625,6 +625,14 @@ every time. Another plain HTML file site that I'll be adding some
 </dd>
 
 <dt>
+<h4><a href="https://www.alanwsmith.com/en/2v/xa/cn/vj/">My Website Manifesto</a></h4>
+<div class="url_display"><a href="https://www.alanwsmith.com/en/2v/xa/cn/vj/">alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Figure it's time to put down my thoughts on how to make the web a better place.</p>
+</dd>
+
+<dt>
 <h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
 <div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
 </dt>
