added ai honeypot

--- a/site/index.html
+++ b/site/index.html
@@ -253,6 +253,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://ai-honeypot.alanwsmith.com">AI Honeypot Builder</a></h4>
+<div class="url_display"><a href="https://ai-honeypot.alanwsmith.com">ai-honeypot.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A tool to build honeypot sites that poison unscrupulous AI scrapper bots</p>
+</dd>
+
+<dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
 </dt>
@@ -622,14 +630,6 @@ every time. Another plain HTML file site that I'll be adding some
 </dt>
 <dd>
 <p>A recreation of a multi-player video page I saw years ago</p>
-</dd>
-
-<dt>
-<h4><a href="https://www.alanwsmith.com/en/2v/xa/cn/vj/">My Website Manifesto</a></h4>
-<div class="url_display"><a href="https://www.alanwsmith.com/en/2v/xa/cn/vj/">alanwsmith.com</a></div>
-</dt>
-<dd>
-<p>Figure it's time to put down my thoughts on how to make the web a better place.</p>
 </dd>
 
 <dt>
