Added color-picker site

--- a/site/index.html
+++ b/site/index.html
@@ -333,6 +333,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://color-picker.alanwsmith.com">Color Picker</a></h4>
+<div class="url_display"><a href="https://color-picker.alanwsmith.com">color-picker.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A color picker that generates OKLCH color pallets. It's a little confusing and optinionated right now, but it can get you started.</p>
+</dd>
+
+<dt>
 <h4><a href="https://color-scheme-switcher.alanwsmith.com/">Color Scheme Switcher (Vanilla JavaScript)</a></h4>
 <div class="url_display"><a href="https://color-scheme-switcher.alanwsmith.com/">color-scheme-switcher.alanwsmith.com</a></div>
 </dt>
