--- a/site/index.html
+++ b/site/index.html
@@ -571,6 +571,14 @@ sub-domain digital gardens. But you already know that since you're looking at th
 </dd>
 
 <dt>
+<h4><a href="https://lists.alanwsmith.com">Lists</a></h4>
+<div class="url_display"><a href="https://lists.alanwsmith.com">lists.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A place to collect lists. Mostly to use in other projects or examples or whatever.</p>
+</dd>
+
+<dt>
 <h4><a href="https://low-tide-at-sunrise.alanwsmith.com/">Low Tide At Sunrise Finder</a></h4>
 <div class="url_display"><a href="https://low-tide-at-sunrise.alanwsmith.com/">low-tide-at-sunrise.alanwsmith.com</a></div>
 </dt>
